--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <h1 class="text-center">Welcome to movie database</h1>
-    <input id="searchTitle" placeholder="Enter movie name here"/>
-    <button id="search" onclick="search()">search</button>
-    <p id="demo"></p>
-    <p id="status"></p>
-    <div class="container" id="posters">
-
+    <div class="text-center">
+        <h1 class="text-center">Welcome to movie database</h1>
+        <input id="searchTitle" placeholder="Enter movie name here"/>
+        <button id="search" onclick="search()">search</button>
+        <p id="demo"></p>
+        <p id="status"></p>
+        <div class="container" id="posters">
+    
+        </div>
     </div>
+
     <script type="text/javascript" src="omdb.js"></script>
 </body>
 </html>
