--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>Document</title>
-    <!-- <link rel="stylesheet" href="index.css"/> -->
+    <link rel="stylesheet" href="index.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
-<body style="background-color: turquoise;">
+<body style="background-color:black">
     <div class="text-center">
-        <h1 class="text-center">Welcome to movie database</h1>
+        <div>
+            <h1 class="text-center">Movie database</h1>
+        </div>
+        
         <input id="searchTitle" placeholder="Enter movie name here"/>
-        <button id="search" onclick="search()">search</button>
-        <p id="demo"></p>
-        <p id="status"></p>
+        <button id="search" class="btn btn-primary" onclick="search()">search</button>
+
+        <!-- Posters will be fetched and appended to below container class div -->
         <div class="container" id="posters">
     
         </div>
