margin added inputblock

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <div>
             <h1 class="text-center">Movie database</h1>
         </div>
-        
-        <input id="searchTitle" placeholder="Enter movie name here"/>
-        <button id="search" class="btn btn-primary" onclick="search()">search</button>
+        <div id="input-block-div">
+            <input id="searchTitle" placeholder="Enter movie name here"/>
+            <button id="search" class="btn btn-primary" onclick="search()">search</button>
+        </div>
+
 
         <!-- Posters will be fetched and appended to below container class div -->
         <div class="container" id="posters">
